--- a/setup.cfg
+++ b/setup.cfg
@@ -1,23 +1,23 @@
 [metadata]
 name = winsdk_toast
 version = attr: winsdk_toast.__version__
-description = A simple package for displaying Windows Toast Notification based on winsdk
+description = A simple package for displaying Windows Toast Notification based on winsdk.
 author = modabao
 author_email = mo_dabao@qq.com
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/Mo-Dabao/winsdk_toast
-license = MIT
+license_files = LICENSE
+classifiers =
+    Operating System :: Microsoft :: Windows :: Windows 10
+    License :: OSI Approved :: MIT License
 
 [options]
 package_dir =
     = src
 packages = find:
 install_requires = winsdk
-include_package_data = True
+python_requires = >=3.5
 
 [options.packages.find]
 where = src
-
-[options.package_data]
-* = LICENSE
